// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderList stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="space-y-5"
>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui py-6 shadow-ui bg-card border-border rounded-b-none border-b-0"
    data-slot="card"
  >
    <div
      class="px-5"
      data-slot="card-content"
    >
      <h4
        class="text-2xl font-semibold tracking-tight text-left text-foreground mb-1.5"
      >
        Order History
      </h4>
      <p
        class="font-medium text-left text-sm text-muted-foreground"
      >
        View and track your orders
      </p>
    </div>
  </div>
  <ul
    class="space-y-4 m-0 border-x border-t border-border rounded-t-none"
    role="list"
  >
    <li>
      <a
        class="block transition-opacity hover:opacity-95 m-0"
        href="/account/orders/INV001"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
          data-slot="card"
        >
          <div
            class="p-6 space-y-4 border-b border-separator"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
            >
              <div
                class="flex flex-wrap gap-x-8 gap-y-2"
              >
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Order ID
                  </p>
                  <p
                    class="text-sm leading-none text-left text-foreground font-medium"
                  >
                    #INV001
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Order Date
                  </p>
                  <p
                    class="text-sm font-medium leading-none text-left text-foreground"
                  >
                    14 Sept 2024
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Total
                  </p>
                  <p
                    class="text-sm font-medium leading-none text-left text-foreground"
                  >
                    £48.38
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Items
                  </p>
                  <p
                    class="text-sm leading-none text-left text-foreground font-semibold"
                  >
                    2
                  </p>
                </div>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-status-positive text-success-foreground"
                data-slot="badge"
                data-testid="order-status-badge"
              >
                Created
              </span>
            </div>
            <div
              class="flex flex-wrap gap-2"
            >
              <div
                class="relative"
              >
                <div
                  class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                >
                  <img
                    alt="Classic Shirt"
                    class="w-full h-full object-cover"
                    loading="lazy"
                    src="__ASSET_MOCK__"
                  />
                </div>
              </div>
              <div
                class="relative"
              >
                <div
                  class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                >
                  <img
                    alt="Dress Pants"
                    class="w-full h-full object-cover"
                    loading="lazy"
                    src="__ASSET_MOCK__"
                  />
                </div>
                <span
                  aria-label="Quantity: 2"
                  class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
                >
                  2
                </span>
              </div>
            </div>
            <div
              class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui rounded-ui bg-muted border-border p-0"
              data-slot="card"
            >
              <div
                class="p-4 space-y-2"
                data-slot="card-content"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-map-pin size-4 text-muted-foreground"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                    />
                    <circle
                      cx="12"
                      cy="10"
                      r="3"
                    />
                  </svg>
                  <span
                    class="text-sm leading-none text-left font-semibold text-foreground"
                  >
                    Pickup Location
                  </span>
                </div>
                <div
                  class="space-y-1 pl-6"
                >
                  <div>
                    <p
                      class="text-left text-xs font-normal text-muted-foreground"
                    >
                      Location
                    </p>
                    <p
                      class="text-sm font-medium leading-none text-left text-foreground"
                    >
                      Salesforce Foundations San Francisco
                    </p>
                  </div>
                  <div>
                    <p
                      class="text-left text-xs font-normal text-muted-foreground"
                    >
                      Address
                    </p>
                    <p
                      class="text-sm leading-none text-left text-foreground font-normal"
                    >
                      415 Mission Street, San Francisco, CA 94105
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pt-2"
            >
              <span
                class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
              >
                View Order Details
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-right size-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </a>
    </li>
    <li>
      <a
        class="block transition-opacity hover:opacity-95 m-0"
        href="/account/orders/INV002"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
          data-slot="card"
        >
          <div
            class="p-6 space-y-4 border-b border-separator"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
            >
              <div
                class="flex flex-wrap gap-x-8 gap-y-2"
              >
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Order ID
                  </p>
                  <p
                    class="text-sm leading-none text-left text-foreground font-medium"
                  >
                    #INV002
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Order Date
                  </p>
                  <p
                    class="text-sm font-medium leading-none text-left text-foreground"
                  >
                    12 Sept 2024
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Total
                  </p>
                  <p
                    class="text-sm font-medium leading-none text-left text-foreground"
                  >
                    £43.00
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Item
                  </p>
                  <p
                    class="text-sm leading-none text-left text-foreground font-semibold"
                  >
                    1
                  </p>
                </div>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-status-positive text-success-foreground"
                data-slot="badge"
                data-testid="order-status-badge"
              >
                New
              </span>
            </div>
            <div
              class="flex flex-wrap gap-2"
            >
              <div
                class="relative"
              >
                <div
                  class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                >
                  <img
                    alt="Summer Dress"
                    class="w-full h-full object-cover"
                    loading="lazy"
                    src="__ASSET_MOCK__"
                  />
                </div>
                <span
                  aria-label="Quantity: 2"
                  class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
                >
                  2
                </span>
              </div>
            </div>
            <div
              class="pt-2"
            >
              <span
                class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
              >
                View Order Details
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-right size-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </a>
    </li>
    <li>
      <a
        class="block transition-opacity hover:opacity-95 m-0"
        href="/account/orders/INV003"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
          data-slot="card"
        >
          <div
            class="p-6 space-y-4 border-b border-separator"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
            >
              <div
                class="flex flex-wrap gap-x-8 gap-y-2"
              >
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Order ID
                  </p>
                  <p
                    class="text-sm leading-none text-left text-foreground font-medium"
                  >
                    #INV003
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Order Date
                  </p>
                  <p
                    class="text-sm font-medium leading-none text-left text-foreground"
                  >
                    8 Sept 2024
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Total
                  </p>
                  <p
                    class="text-sm font-medium leading-none text-left text-foreground"
                  >
                    £95.92
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Items
                  </p>
                  <p
                    class="text-sm leading-none text-left text-foreground font-semibold"
                  >
                    2
                  </p>
                </div>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-status-critical/20 text-status-critical-foreground"
                data-slot="badge"
                data-testid="order-status-badge"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x mr-1 size-3.5"
                  data-testid="order-status-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
                Cancelled
              </span>
            </div>
            <div
              class="flex flex-wrap gap-2"
            >
              <div
                class="relative"
              >
                <div
                  class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                >
                  <img
                    alt="Cancelled Item 1"
                    class="w-full h-full object-cover"
                    loading="lazy"
                    src="__ASSET_MOCK__"
                  />
                </div>
                <span
                  aria-label="Quantity: 2"
                  class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
                >
                  2
                </span>
              </div>
              <div
                class="relative"
              >
                <div
                  class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                >
                  <img
                    alt="Cancelled Item 2"
                    class="w-full h-full object-cover"
                    loading="lazy"
                    src="__ASSET_MOCK__"
                  />
                </div>
                <span
                  aria-label="Quantity: 3"
                  class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
                >
                  3
                </span>
              </div>
            </div>
            <div
              class="pt-2"
            >
              <span
                class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
              >
                View Order Details
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-right size-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </a>
    </li>
  </ul>
  <div
    class="p-6 m-0 border-b border-x border-border rounded-b-xl flex flex-row items-center w-full gap-4"
  >
    <p
      class="text-sm font-medium leading-none text-left text-muted-foreground min-w-0 shrink"
      data-testid="total-orders-text"
    >
      Viewing 3 orders
    </p>
  </div>
</div>
`;

exports[`OrderList stories snapshot > EmptyState story renders and matches snapshot 1`] = `
<div
  class="space-y-5"
>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui py-6 shadow-ui bg-card border-border rounded-b-none border-b-0"
    data-slot="card"
  >
    <div
      class="px-5"
      data-slot="card-content"
    >
      <h4
        class="text-2xl font-semibold tracking-tight text-left text-foreground mb-1.5"
      >
        Order History
      </h4>
      <p
        class="font-medium text-left text-sm text-muted-foreground"
      >
        View and track your orders
      </p>
    </div>
  </div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui py-6 shadow-ui border-border m-0 border-b-0"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="py-4 space-y-4 flex flex-col items-center justify-center"
      >
        <h4
          class="text-2xl font-semibold tracking-tight text-left text-muted-foreground w-fit"
        >
          You haven't placed an order yet. Once you place an order the details will show up here.
        </h4>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
          data-size="default"
          data-slot="button"
          data-variant="default"
          href="/"
        >
          Continue Shopping
        </a>
      </div>
    </div>
  </div>
  <div
    class="p-6 m-0 border-b border-x border-border rounded-b-xl flex flex-row items-center w-full gap-4"
  >
    <p
      class="text-sm font-medium leading-none text-left text-muted-foreground min-w-0 shrink"
      data-testid="total-orders-text"
    >
      Viewing 0 orders
    </p>
  </div>
</div>
`;

exports[`OrderList stories snapshot > WithReturnStatus story renders and matches snapshot 1`] = `
<div
  class="space-y-5"
>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui py-6 shadow-ui bg-card border-border rounded-b-none border-b-0"
    data-slot="card"
  >
    <div
      class="px-5"
      data-slot="card-content"
    >
      <h4
        class="text-2xl font-semibold tracking-tight text-left text-foreground mb-1.5"
      >
        Order History
      </h4>
      <p
        class="font-medium text-left text-sm text-muted-foreground"
      >
        View and track your orders
      </p>
    </div>
  </div>
  <ul
    class="space-y-4 m-0 border-x border-t border-border rounded-t-none"
    role="list"
  >
    <li>
      <a
        class="block transition-opacity hover:opacity-95 m-0"
        href="/account/orders/INV001"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
          data-slot="card"
        >
          <div
            class="p-6 space-y-4 border-b border-separator"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
            >
              <div
                class="flex flex-wrap gap-x-8 gap-y-2"
              >
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Order ID
                  </p>
                  <p
                    class="text-sm leading-none text-left text-foreground font-medium"
                  >
                    #INV001
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Order Date
                  </p>
                  <p
                    class="text-sm font-medium leading-none text-left text-foreground"
                  >
                    14 Sept 2024
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Total
                  </p>
                  <p
                    class="text-sm font-medium leading-none text-left text-foreground"
                  >
                    £48.38
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Items
                  </p>
                  <p
                    class="text-sm leading-none text-left text-foreground font-semibold"
                  >
                    2
                  </p>
                </div>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-muted text-muted-foreground"
                data-slot="badge"
                data-testid="order-return-status-badge"
              >
                Return Complete
              </span>
            </div>
            <div
              class="flex flex-wrap gap-2"
            >
              <div
                class="relative"
              >
                <div
                  class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                >
                  <img
                    alt="Classic Shirt"
                    class="w-full h-full object-cover"
                    loading="lazy"
                    src="__ASSET_MOCK__"
                  />
                </div>
              </div>
              <div
                class="relative"
              >
                <div
                  class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                >
                  <img
                    alt="Dress Pants"
                    class="w-full h-full object-cover"
                    loading="lazy"
                    src="__ASSET_MOCK__"
                  />
                </div>
                <span
                  aria-label="Quantity: 2"
                  class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
                >
                  2
                </span>
              </div>
            </div>
            <div
              class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui rounded-ui bg-muted border-border p-0"
              data-slot="card"
            >
              <div
                class="p-4 space-y-2"
                data-slot="card-content"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-map-pin size-4 text-muted-foreground"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                    />
                    <circle
                      cx="12"
                      cy="10"
                      r="3"
                    />
                  </svg>
                  <span
                    class="text-sm leading-none text-left font-semibold text-foreground"
                  >
                    Pickup Location
                  </span>
                </div>
                <div
                  class="space-y-1 pl-6"
                >
                  <div>
                    <p
                      class="text-left text-xs font-normal text-muted-foreground"
                    >
                      Location
                    </p>
                    <p
                      class="text-sm font-medium leading-none text-left text-foreground"
                    >
                      Salesforce Foundations San Francisco
                    </p>
                  </div>
                  <div>
                    <p
                      class="text-left text-xs font-normal text-muted-foreground"
                    >
                      Address
                    </p>
                    <p
                      class="text-sm leading-none text-left text-foreground font-normal"
                    >
                      415 Mission Street, San Francisco, CA 94105
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pt-2"
            >
              <span
                class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
              >
                View Order Details
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-right size-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </a>
    </li>
    <li>
      <a
        class="block transition-opacity hover:opacity-95 m-0"
        href="/account/orders/INV002"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
          data-slot="card"
        >
          <div
            class="p-6 space-y-4 border-b border-separator"
            data-slot="card-content"
          >
            <div
              class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
            >
              <div
                class="flex flex-wrap gap-x-8 gap-y-2"
              >
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Order ID
                  </p>
                  <p
                    class="text-sm leading-none text-left text-foreground font-medium"
                  >
                    #INV002
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Order Date
                  </p>
                  <p
                    class="text-sm font-medium leading-none text-left text-foreground"
                  >
                    12 Sept 2024
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Total
                  </p>
                  <p
                    class="text-sm font-medium leading-none text-left text-foreground"
                  >
                    £43.00
                  </p>
                </div>
                <div
                  class="space-y-2"
                >
                  <p
                    class="text-left text-xs font-medium text-muted-foreground"
                  >
                    Item
                  </p>
                  <p
                    class="text-sm leading-none text-left text-foreground font-semibold"
                  >
                    1
                  </p>
                </div>
              </div>
              <span
                class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-info text-info-foreground"
                data-slot="badge"
                data-testid="order-return-status-badge"
              >
                Partial Return Initiated
              </span>
            </div>
            <div
              class="flex flex-wrap gap-2"
            >
              <div
                class="relative"
              >
                <div
                  class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
                >
                  <img
                    alt="Summer Dress"
                    class="w-full h-full object-cover"
                    loading="lazy"
                    src="__ASSET_MOCK__"
                  />
                </div>
                <span
                  aria-label="Quantity: 2"
                  class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
                >
                  2
                </span>
              </div>
            </div>
            <div
              class="pt-2"
            >
              <span
                class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
              >
                View Order Details
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-right size-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </a>
    </li>
  </ul>
  <div
    class="p-6 m-0 border-b border-x border-border rounded-b-xl flex flex-row items-center w-full gap-4"
  >
    <p
      class="text-sm font-medium leading-none text-left text-muted-foreground min-w-0 shrink"
      data-testid="total-orders-text"
    >
      Viewing 2 orders
    </p>
  </div>
</div>
`;
